--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">page loading</div>
+    <div id="root"></div>
     
    
     <!--
